k8s/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-nginx-ingress
  namespace: lab
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-nginx-service
                port:
                  number: 80
